--- a/gleam.toml
+++ b/gleam.toml
@@ -16,9 +16,9 @@ version = "1.0.0"
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 sqlight = ">= 1.0.2 and < 2.0.0"
 cake = ">= 2.1.3 and < 3.0.0"
-envoy = ">= 1.0.2 and < 2.0.0"
 cake_sqlight = ">= 1.1.2 and < 2.0.0"
 logging = ">= 1.3.0 and < 2.0.0"
+glenvy = ">= 2.0.1 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
