--- a/gleam.toml
+++ b/gleam.toml
@@ -20,7 +20,7 @@ cake_sqlight = ">= 1.1.2 and < 2.0.0"
 logging = ">= 1.3.0 and < 2.0.0"
 glenvy = ">= 2.0.1 and < 3.0.0"
 # Switch to official release ASAP
-discord_gleam = { git = "git@github.com:arconyx/discord_gleam", ref="eb9429c" }
+discord_gleam = { git = "https://github.com/arconyx/discord_gleam.git", ref="eb9429c" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
