--- a/gleam.toml
+++ b/gleam.toml
@@ -1,16 +1,22 @@
-name = "space_game"
-version = "1.0.0"
-
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
 # For a full reference of all the available options, you can have a look at
 # https://gleam.run/writing-gleam/gleam-toml/.
+
+name = "space_game"
+version = "0.1.0"
+
+target="erlang"
+
+description = "A slow space trading game over Discord"
+licences = ["MIT"]
+repository = { type = "github", user = "arconyx", repo = "space-game" }
+
+# Excluded from documentation
+# internal_modules = [
+#   "discord/api",
+#   "discord/gatehouse",
+#   "discord/gateway",
+#   "discord/watcher"
+# ]
 
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
