--- a/gleam.toml
+++ b/gleam.toml
@@ -32,6 +32,7 @@ gleam_erlang = ">= 1.3.0 and < 2.0.0"
 gleam_otp = ">= 1.1.0 and < 2.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
 gramps = ">= 6.0.0 and < 7.0.0"
+gleam_time = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
